--- a/project/youtube.html
+++ b/project/youtube.html
@@ -3,76 +3,184 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Youtube</title>
+  <title>VidNest</title>
   <link rel="icon" href="images\favicon.png">
   <link rel="stylesheet" href="youtube.css">
+  <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<input class="searchbar" type="text" placeholder="Search">
+<div class="header">
+<div class="left-section"></div>
+<div class="middle-section"><input class="searchbar" type="text" placeholder="Search"></div>
+<div class="right-section"></div>
+</div>
 
+
+
+<div class="screen-grid">
 <div class="video-preview">
-<img class="thumbnail" src="images/1.avif" alt="">
-<p class="video-title">Study with me!!</p>
-<p class="channel-name">Justin Marques</p>
-<p class="views-timeline">300K views &#183; 11 months ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/1.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-1.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Study with me!!</p>
+      <p class="channel-name">Justin Marques</p>
+      <p class="views-timeline">300K views &#183; 11 months ago </p>
+    </div>
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/2.avif" alt="">
-<p class="video-title">Truth about Jaqen</p>
-<p class="channel-name">Game-Of-Thrones-FanBase</p>
-<p class="views-timeline">7M views &#183; 2 years ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/2.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-2.jpg" alt="">
+    </div>
+    <div class="video-details">
+    <p class="video-title">Truth about Jaqen</p>
+    <p class="channel-name">Game-Of-Thrones-FanBase</p> 
+    <p class="views-timeline">7M views &#183; 2 years ago </p>
+  </div>
+</div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/3.avif" alt="">
-<p class="video-title">Geroge R.R. Martin reveals secrets</p>
-<p class="channel-name">Juniper-Advisor</p>
-<p class="views-timeline">1M views &#183; 9 months ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/3.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-3.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Geroge R.R. Martin reveals secrets</p>
+      <p class="channel-name">Juniper-Advisor</p>
+      <p class="views-timeline">1M views &#183; 9 months ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/4.avif" alt="">
-<p class="video-title">Dexter-best-Moments</p>
-<p class="channel-name">ParaMount+</p>
-<p class="views-timeline">500K views &#183; 3 months ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/4.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+     <img class="profile-picture" src="images/channels/channel-4.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Dexter-best-Moments</p>
+      <p class="channel-name">ParaMount+</p>
+      <p class="views-timeline">500K views &#183; 3 months ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/5.avif" alt="">
-<p class="video-title">Quentiin Knew it!!!!</p>
-<p class="channel-name">Art of Cinema</p>
-<p class="views-timeline">150K views &#183; 2 years ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/5.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-5.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Quentiin Knew it!!!!</p>
+      <p class="channel-name">Art of Cinema</p>
+      <p class="views-timeline">150K views &#183; 2 years ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/6.avif" alt="">
-<p class="video-title">Irfan Khan Best Moments</p>
-<p class="channel-name">Hindi-Cinema</p>
-<p class="views-timeline">20M views &#183; 9 months ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/6.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-6.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Irfan Khan Best Moments</p>
+      <p class="channel-name">Hindi-Cinema</p>
+      <p class="views-timeline">20M views &#183; 9 months ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/7.avif" alt="">
-<p class="video-title">ALT to Enggineer in Japan</p>
-<p class="channel-name">Jannis Antekopompu</p>
-<p class="views-timeline">100K views &#183; 5 months ago </p>
+  <div class="thumbnail-row">  
+    <img class="thumbnail" src="images/7.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-7.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">ALT to Enggineer in Japan</p>
+      <p class="channel-name">Jannis Antekopompu</p>
+      <p class="views-timeline">100K views &#183; 5 months ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/8.avif" alt="">
-<p class="video-title">FULL-Github Course</p>
-<p class="channel-name">JS Mastery</p>
-<p class="views-timeline">50K views &#183; 7 months ago </p>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/8.avif" alt="">
+  </div>
+
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-8.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">FULL-Github Course</p>
+      <p class="channel-name">JS Mastery</p>
+      <p class="views-timeline">50K views &#183; 7 months ago </p>
+    </div>
+
+  </div>
 </div>
 
 <div class="video-preview">
-<img class="thumbnail" src="images/9.avif" alt="">
-<p class="video-title">Linus Did It!!</p>
-<p class="channel-name">Primagen</p>
-<p class="views-timeline">500K views &#183; 6 months ago </p>
-</div>
+  <div class="thumbnail-row">
+    <img class="thumbnail" src="images/9.avif" alt="">
+  </div>
 
+  <div class="video-grid">
+    <div class = "channel-logo">
+      <img class="profile-picture" src="images/channels/channel-9.jpg" alt="">
+    </div>
+    <div class="video-details">
+      <p class="video-title">Linus Did It!!</p>
+      <p class="channel-name">Primagen</p>
+      <p class="views-timeline">500K views &#183; 6 months ago </p>
+  </div>
+  </div>
+</div>
+</div>
 
 </body>
 </html>
